Added company api views/ without test
